# ERP_System_Monorepo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  index.css
frontend/src/api/: http.js
frontend/src/components/: CategoryForm.jsx  CustomerForm.jsx  Modal.jsx  ProductForm.jsx  Toast.jsx  UniversalTable.jsx
frontend/src/pages/: CategoriesPage.jsx  CustomersPage.jsx  ProductsPage.jsx
services/customers-service/: Dockerfile  pyproject.toml
services/customers_service/: Dockerfile  pyproject.toml
services/customers_service/app/: main.py
services/customers_service/app/api/: customer.py  dependencies.py
services/customers_service/app/core/: config.py  database.py
services/customers_service/app/models/: models.py
services/customers_service/app/repositories/: customer.py  exceptions.py  utils.py
services/customers_service/app/schemas/: schemas.py
services/customers_service/app/services/: customer.py
services/customers_service/migrations/: env.py
services/customers_service/migrations/versions/: 40496fc5f801_create_customer_table.py
services/products-service/: pyproject.toml
services/products-service/app/: main.py
services/products-service/app/routers/: products_router.py
services/products_service/: Dockerfile  alembic.ini  pyproject.toml
services/products_service/app/: main.py
services/products_service/app/api/: category.py  dependencies.py  products.py
services/products_service/app/core/: config.py
services/products_service/app/models/: models.py
services/products_service/app/repositories/: __init__.py  category.py  exceptions.py  products.py  utils.py
services/products_service/app/schemas/: schemas.py
services/products_service/app/services/: category.py  products.py
services/products_service/migrations/: env.py
services/products_service/migrations/versions/: a17e4e65bc06_create_tables.py
shared_lib/: pyproject.toml  universal_table.py
